--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>This is a template</h1>
+
+    <div class="player_selection" id="container">
+        <button class="rock">Rock</button>
+        <button class="paper">Paper</button>
+        <button class="scissors">Scissors</button>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
