adding results conatinr

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <button class="paper">Paper</button>
         <button class="scissors">Scissors</button>
     </div>
+
+    <div class="results_container">
+        <p class="results"></p>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
