--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     </div>
 
     <div class="results_container">
-        <p class="results"></p>
+        <p class="player_selection_text"></p>
+        <p class="computer_selection_text"></p>
+        <p class="winner_text"></p>
+
     </div>
     <script src="./script.js"></script>
 </body>
