Adding sccore elemtns

--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
         <p class="winner_text"></p>
 
     </div>
+
+    <div class="score_container">
+        <p class="player_score"></p>
+        <p class="computer_score"></p>
+    </div>
+
+    <div class="winner-containr">
+        <p class="winner_message"></p>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
