delete helper function

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 <body>
@@ -23,8 +24,8 @@
     </div>
 
     <div class="score_container">
-        <p class="player_score"></p>
-        <p class="computer_score"></p>
+        <p class="player_score">Player Score: 0</p>
+        <p class="computer_score">Computer Score: 0</p>
     </div>
 
     <div class="winner-containr">
