Adding reset button and functiontallity

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     <div class="winner-containr">
         <p class="winner_message"></p>
     </div>
+
+    <div class="reset_container">
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
